<resources>
    <string name="app_name">MuZee</string>

    // Main screen seller
    <string name="welcome_message">Welcome</string>
    <string name="store_name">Khang Music</string>
    <string name="store_address">Khuong Viet</string>

    // Nav menu item for seller
    <string name="home_item">Home</string>
    <string name="my_product_item">My Product</string>
    <string name="order_list_item">Order List</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    // My product screen for seller
    <string name="add_new_product_button">Add new product</string>
    <string name="confirm_button">Confirm</string>

    // Order list screen
    <string name="order_label">Order</string>
    <string name="total_label">Total Price</string>

    // Order detail screen
    <string name="item_total_label">Item Total</string>
    <string name="delivery_charges_label">Delivery Charges</string>
    <string name="accept_button">Accept</string>
    <string name="cancel_button">Cancel</string>


    // Product overview normal user
    <string name="test_title">Nord Piano 4 88-Key Digital Piano</string>
    <string name="test_price">$2,999</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="view">View</string>

    // Product detail
    <string name="display_price">$%,.0f</string>
    <string name="detail">Detail</string>
    <string name="category">Category</string>
    <string name="make">Make</string>
    <string name="description">Description</string>
    <string name="test_description">"General  \n- 88-note Triple Sensor keybed with grand weighted action  \n- Nord Virtual Hammer Action Technology   \n- Seamless Transitions NEW  \n- Layer and Split with Split Point crossfades NEW  \n- OLED display for excellent overview   \n- Enhanced Organize Mode NEW  \n- Numeric Pad for direct Program access  NEW "</string>
    <string name="test_category">Keyboard</string>
    <string name="test_make">Nord</string>
    <string name="test_seller_name">Daph Duck</string>
    <string name="test_seller_make">Tan Binh, Ho Chi Minh</string>
    <string name="payment_button">Proceed to payment</string>
    <string name="subtotal">Subtotal</string>
    <string name="place_order">Place order</string>
    <string name="product_subtotal">Product Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="shipping_price">$10</string>
    <string name="tax_price">$0</string>
    <string name="total_price_test">$3,009</string>
    <string name="shipping_to">Shipping to</string>
    <string name="test_shipping_profile">David Dean | 0908999888</string>
    <string name="test_address">Adr: 246 Cong Hoa, Q.Tan Binh, Ho Chi Minh</string>
    <string name="payment_info">%s | %s</string>

    //Main screen normal user
    <string name="hello_blank_fragment">Hello blank fragment</string>
    // Search View
    <string name="search_hint">What are you looking for today?</string>

    //Category screen
    <string name="pianoLabel">Piano</string>
    <string name="bass_guitar">Bass Guitar</string>
    <string name="acoustic_guitar">Acoustic Guitar</string>
    <string name="electric_guitar">Electric Guitar</string>
    <string name="drum">Drum</string>
    <string name="organ">Organ</string>
    <string name="todo">TODO</string>
    <string name="category_fragment_label">Category</string>
    // search key when clicking on the image
    <string name="piano_search">Piano</string>
    <string name="organ_search">Keyboard</string>
    <string name="drum_search">Drum</string>
    <string name="guitar_search">Guitar</string>
    <string name="electric_search">Electric</string>
    <string name="bass_search">Bass</string>

    // Nav menu item for normal users
    <string name="category_item">Categories</string>
    <string name="my_order_item">My order</string>
    <string name="my_shop_item">My shop</string>
    <string name="my_product">My product</string>
    <string name="offers_item">Offers</string>
    <string name="switch_shopping_mode_item">Old shopping mode</string>
    <string name="customer_support_item">Customer support</string>
    <string name="username_header_navigation">TDN123</string>

    // toolbar menu item
    <string name="cart_item">Cart</string>

    // old product frame
    <string name="old_fragment_label">Your store</string>
    <string name="post_button">Post</string>
    <string name="next">Next</string>

    // add product
    <string name="add_old_product_fragment">Add product</string>
    <string name="add_product_image">Add product image</string>
    <string name="enter_product_details">Enter product details</string>
    <string name="add_product_category">Product category</string>
    <string name="add_product_name">Product name</string>
    <string name="add_product_price">Product price</string>
    <string name="add_product_description">Product description</string>
    <string name="btn_confirm_label">Confirm</string>
    <string name="required_help_text">Required*</string>
    // error:
    <string name="error_text_CATEGORY">Select a category</string>
    <string name="error_text_PRODUCT_NAME">Enter product name</string>
    <string name="error_text_PRODUCT_PRICE">Enter product price</string>
    <string name="error_text_OLD_PRODUCT_CONDITION">Enter product condition</string>
    <string name="edit">Edit</string>
    <string name="myShopFragment">My Shop</string>
    <string name="old_shopping">Old shopping mode</string>
    <string name="new_shopping">New shopping mode</string>
    <string name="edit_product">Edit product</string>
    <string name="add_product_condition">Product condition</string>
    <string name="condition">Cond: %s/10</string>
    // dialogs
    <string name="incorrect_username_title">Incorrect Username</string>
    <string name="incorrect_username_message">The username you entered doesn\'t appear to belong to an account . Please check your username and try again.</string>
    <string name="incorrect_password_title">Incorrect Password</string>
    <string name="incorrect_password_message">The username you entered is incorrect.Please try again.</string>
    <string name="btn_ok">OK</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="keep_me_login">Keep me logged in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Username</string>
    <string name="forget_password">Forgot your password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <!--Strings related to sign up-->
    <string name="sign_up"><u>Sign up</u></string>
    <string name="tab_normal_users">Normal Users</string>
    <string name="tab_seller">Sellers</string>
    <string name="label_signup">Sign Up</string>
    <!--Strings related to sign up for normal user-->
    <string name="add_full_name">Enter fullname</string>
    <string name="add_username">Enter username</string>
    <string name="add_phone_number">Enter phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="re_enter_password">Re-enter password</string>
    <!--Strings related to sign up for seller-->
    <string name="add_store_name">Enter store name</string>
    <string name="add_address_store">"Enter store address "</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="error_enter_username">Please enter username</string>
    <string name="error_enter_password">Please enter password</string>
    <string name="edit_stock">Enter stock of product</string>
    <string name="add_product_stock">Enter stock of product</string>
    <string name="new_product_label">new product</string>
    <string name="old_product_label">old product</string>
    <string name="error_text_fullname">Please enter fullname</string>
    <string name="error_text_phonenumber">Please enter phone number</string>
    <string name="error_text_re_password">Please re-enter password</string>
    <string name="error_text_not_same_pwd">Password does not match. Please try again</string>
    <string name="error_text_storeName">Please enter store name</string>
    <string name="error_text_addressStore">Please enter store\'s address</string>
    <string name="LoginLabel">Login</string>
    <string name="Product_title">My Product</string>
    <string name="product_detail_title">Product Detail</string>
    <string name="order_list_title">Order List</string>
    <string name="order_detail_title">Order Detail</string>
    <string name="add_new_product_title">Add New Product</string>
    <string name="connection_error_title">Connection Error</string>
    <string name="connection_error_message">An error occurred when trying to connect to the server. Please check your internet connection and try again</string>
    <string name="stock_test">x1</string>
    <string name="btn_logout">Log Out</string>
    <string name="delete_product">Delete product</string>
    <string name="stock_value_detail_product">Stock</string>
    <string name="display_address">Adr: %s</string>
    <string name="edit_old_product_fragment_label">Edit old product</string>
    <string name="cart_fragment_label">Cart</string>
    <string name="productdetaillabel">Product Detail</string>
    <string name="payment_label">Payment</string>
</resources>