<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/homeItem_normalUser"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home_item" />

    <item
        android:id="@+id/categoriesItem"
        android:icon="@drawable/ic_baseline_list_alt_24"
        android:title="@string/category_item" />
    <item
        android:id="@+id/myOrderItem"
        android:icon="@drawable/ic_order_icon"
        android:title="@string/my_order_item" />
    <item
        android:id="@+id/myShopItem"
        android:icon="@drawable/ic_shopping_cart"
        app:actionLayout="@layout/my_shop_item"
        android:title="@string/my_shop_item">

    </item>

    <item
        android:id="@+id/productItem"
        android:title="@string/my_product"
        android:visible="false" />
    <item
        android:id="@+id/offersItem"
        android:title="@string/offers_item"
        android:visible="false" />

    <item
        android:id="@+id/switchMode"
        android:icon="@drawable/ic_switch_mode_icon"
        android:title="@string/switch_shopping_mode_item"
        />
    <item
        android:id="@+id/customerSupportItem"
        android:icon="@drawable/ic_customer_support_icon"
        android:title="@string/customer_support_item" />
    <group
        android:id="@+id/system_group"
        >
        <item
            android:id="@+id/logout_btn"
            android:title="@string/btn_logout"
            android:icon="@drawable/logout_icon"
            />
    </group>
</menu>